--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "리본 행운상점",
   "main": "main.js",
   "scripts": {
-    "start": "npx http-server ./ -o"
+    "start": "npx http-server ./ -o",
+    "update": "node update.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/huepyu/ribbon-lucky-v2/issues"
   },
-  "homepage": "https://github.com/huepyu/ribbon-lucky-v2#readme"
+  "homepage": "https://github.com/huepyu/ribbon-lucky-v2#readme",
+  "dependencies": {
+    "jsonfile": "^6.1.0"
+  }
 }
